[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://assets/boss/gun.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dpusfsshhbgwt" path="res://assets/textures/Final/gun_run.png" id="2"]
[ext_resource type="Texture2D" uid="uid://c4tgs7pfn4i27" path="res://assets/textures/Final/gun_idle.png" id="3"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(37, 10)
script = null

[sub_resource type="SpriteFrames" id="2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2")
}],
"loop": false,
"name": &"atk",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}]
script = null

[node name="Gun" type="Area2D"]
script = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -5)
shape = SubResource("1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-24, -48)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("2")
animation = &"idle"
centered = false

[node name="AtkPos" type="Marker2D" parent="."]
position = Vector2(0, -20)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
